# GravitySim

./: .gitignore  CMakeLists.txt  README.md  STRUCTURE.md  TODO.md  installer.iss
assets/shaders/: buildBHTree.comp  gravityBarnesHutMethod.comp  gravityDirectMethod.comp  particle.frag  particle.vert  particleSSBO.frag  particleSSBO.vert
include/: Arrow.h  Background.h  Circle.h  CollisionSolution.h  Dot.h  GUI.h  GravityEngine.h  Line.h  Object.h  ObjectManager.h  VAO.h  VBO.h  Vector2f.h  Vector3f.h  Window.h  globals.h  shaderClass.h
include/Compute/: ComputeShader.h  ComputeSystem.h  SSBO.h
include/Core/: Application.h  Hardware.h  Settings.h  Time.h  Timer.h
include/DataTypes/: BHTree.h  Vector2d.h  Vector2f.h
include/Entities/: Entities.h  Entity.h  ParticleGroup.h
include/Events/: Event.h  Events.h
include/GUI/: Colors.h  GUI.h  IconCodes.h  Positions.h
include/Physics/: GravityEngine.h  PhysicsEngine.h
include/Rendering/: Background.h  Circle.h  Dots.h  Line.h  Renderer.h  Shader.h  VAO.h  VBO.h
lib/glad/: glad.c
lib/glad/include/: glad.h
shaders/: default.frag  default.vert
src/: Arrow.cpp  Background.cpp  Circle.cpp  CollisionSolution.cpp  Dot.cpp  GUI.cpp  GravityEngine.cpp  Line.cpp  Object.cpp  ObjectManager.cpp  VAO.cpp  VBO.cpp  Vector2f.cpp  Vector3f.cpp  Window.cpp  globals.cpp  main.cpp  shaderClass.cpp
src/Compute/: ComputeShader.cpp  ComputeSystem.cpp  SSBO.cpp
src/Core/: Application.cpp  Hardware.cpp  Settings.cpp  Time.cpp  Timer.cpp
src/DataTypes/: BHTree.cpp  Vector2d.cpp  Vector2f.cpp  Vector3f.cpp
src/Entities/: Entities.cpp  Entity.cpp
src/Events/: Events.cpp
src/GUI/: GUI.cpp  Positions.cpp
src/Physics/: GravityEngine.cpp  PhysicsEngine.cpp
src/Rendering/: Background.cpp  Circle.cpp  Dots.cpp  Line.cpp  Renderer.cpp  Shader.cpp  VBO.cpp
